<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_move_to_inbox_black_24dp"
        android:title="@string/title_inbox" />
    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/title_info" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_black_24dp"
        android:title="@string/title_account" />

</menu>
