<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logbtn"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round_button2"
        android:text="@string/txt_logbtn"
        android:textColor="@android:color/background_light"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/passinput"
        app:layout_constraintStart_toStartOf="@+id/passinput"
        app:layout_constraintTop_toBottomOf="@+id/passinput" />

    <EditText
        android:id="@+id/emailinput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/passinput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/txt_passin"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/emailinput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailinput"
        app:layout_constraintTop_toBottomOf="@+id/emailinput"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/fpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/txt_fpass"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/passinput"
        app:layout_constraintTop_toBottomOf="@+id/passinput" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_signup"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logbtn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/txt_logo"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_dont_have_account"
        app:layout_constraintBottom_toBottomOf="@+id/signup"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintTop_toTopOf="@+id/signup" />

    <ProgressBar
        android:id="@+id/loginbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/logbtn"
        app:layout_constraintEnd_toEndOf="@+id/logbtn"
        app:layout_constraintStart_toStartOf="@+id/logbtn"
        app:layout_constraintTop_toTopOf="@+id/logbtn" />

</android.support.constraint.ConstraintLayout>