<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txt_changepass"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/changepass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/txt_passin"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/changepass2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_edit_text"
        android:ems="10"
        android:hint="@string/txt_cpass"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/changepass"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/changepass"
        app:layout_constraintTop_toBottomOf="@+id/changepass" />

    <Button
        android:id="@+id/changepassbtn"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/round_button2"
        android:text="@string/txt_changepass"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/changepass2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/changepass2"
        app:layout_constraintTop_toBottomOf="@+id/changepass2" />

    <ProgressBar
        android:id="@+id/progresschpass"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/changepassbtn"
        app:layout_constraintEnd_toEndOf="@+id/changepassbtn"
        app:layout_constraintStart_toStartOf="@+id/changepassbtn"
        app:layout_constraintTop_toTopOf="@+id/changepassbtn" />

</android.support.constraint.ConstraintLayout>